Small addition to the solution page

--- a/module3-solution/module3-solution.html
+++ b/module3-solution/module3-solution.html
@@ -21,7 +21,7 @@
 					</div>
 					
 					<!-- Designing the Collapsing Bar -->
-					<button type="button" class="navbar-toggler collapsed d-block d-sm-none" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+					<button type="button" class="navbar-toggler collapsed d-sm-block d-md-none" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
 						<span class="navbar-toggler-icon"></span>
 						<span class="sr-only">Toggle Navigation Bar</span>
 						<span class="icon-bar"></span>
