--- a/module3-solution/module3-solution.html
+++ b/module3-solution/module3-solution.html
@@ -15,7 +15,7 @@
 		<!-- Designing the Navigation Bar -->
 		<header>
 			<nav id="header-nav" class="navbar navbar-default navbar-light">
-				<div class="container">
+				<div class="container-fluid">
 					<div class="navbar-header">
 						<div class="navbar-brand"> <h1>Food, LLC</h1></div>
 					</div>
