Small Addition to the solution.

--- a/module4-solution/module4-solution.html
+++ b/module4-solution/module4-solution.html
@@ -8,6 +8,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Assignment 4 Solution</h1>
+  <h1>Assignment 4 Solution. Please open the console to view.</h1>
 </body>
 </html>
